# sta_partition

designs/core_complex/: README.me  partition.ys
designs/core_complex/project/: dont_use.def  fennec_s_asap7.sdc  hicell.def  insbuf.def  locell.def  pi_driving_cell.def
plugin/sta_partition/: CMakeLists.txt  README.md
plugin/sta_partition/src/: CMakeLists.txt  README.md  sta_partition.cc
